k8s/deployment-be.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: rojhatince47/basic-docker-tutorial-be:proje
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
          requests:
            cpu: "0.1"
            memory: "128Mi"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
  - port: 5000
  #container portu bu
    targetPort: 80
